# auth-log-analyzer

./: .gitattributes  .gitignore  README.md  app.py  loganalyzer.py  project_dump.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: loganalyzer.yaml
data/: alerts.db  parsed_alerts.json  report.txt  sample_report.html
log_analyzer/: cache.py  cli.py  config.py  database.py  detector.py  enrichment.py  geoip.py  input_resolver.py  parser.py  pdf_export.py
log_analyzer/report/: builder.py  scoring.py  template.html
src/: database.py  detector.py  enrichment.py  main.py  parser.py  pipeline.py  reporter.py  utils.py
src/report/: builder.py  renderer.py  template.html
static/: style.css
templates/: dashboard.html  search.html
tests/: conftest.py  test_config.py  test_detector.py  test_parser.py  test_parser_multi.py  test_scoring.py
