[project]
name = "log-analyzer"
version = "0.5.0"
dependencies = ["requests", "python-dotenv", "jinja2", "pyyaml"]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
loganalyzer = "log_analyzer.cli:main"

[tool.setuptools]
packages = ["log_analyzer", "log_analyzer.report"]

[tool.setuptools.package-data]
"log_analyzer.report" = ["template.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
